welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:4: error: value to1 is not a member of Int
for(j<-0 to1){
         ^